--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <div class="row">
-      <div class="large-12 comluns small-order-1">
+      <div class="large-12 medium-12 small-12 comluns small-order-1">
         <div class="row align-left">
-          <div class="large-12 colums text-left">
+          <div class="large-12 small-12 medium-12 colums text-left">
             <div class="callout">
               <h2>Recetas-magicas</h2>
               <p class="text-left">Para el buen gusto</p>
@@ -47,13 +47,13 @@
                   <h4>Favoritos:</h4>
                 </div>
                 <div class="row large-uncollapse">
-                  <div class="large-4 small-2 colums">
+                  <div class="large-4 small-4 colums">
                     <img src="img/plato1.jpg" class="thumbnail">
                   </div>
-                  <div class="large-4 small-2 colums">
+                  <div class="large-4 small-4 colums">
                     <img src="img/plato2.jpg" class="thumbnail width">
                   </div>
-                  <div class="large-4 small-2 colums">
+                  <div class="large-4 small-4 colums">
                     <img src="img/plato3.jpg" class="thumbnail">
                   </div>
                 </div>
@@ -61,13 +61,13 @@
 
               <div class="large-12 colums">
                 <div class="row large-uncollapse">
-                  <div class="large-4 small-2 colums">
+                  <div class="large-4 small-4 colums">
                     <img src="img/plato4.jpg" class="thumbnail">
                   </div>
-                  <div class="large-4 small-2 colums">
+                  <div class="large-4 small-4 colums">
                     <img src="img/plato5.jpg" class="thumbnail width">
                   </div>
-                  <div class="large-4 small-2 colums">
+                  <div class="large-4 small-4 colums">
                     <img src="img/plato6.jpg" class="thumbnail">
                   </div>
                 </div>
@@ -85,7 +85,70 @@
             </div>
             <div class="large-7 medium-7">
               <div class="callout">
-                <h4>Espaguetis</h4>
+                <h4>Espaguetis a la boloñesa</h4>
+                <div class="large-12 medium-12 small-12 columns">
+                  <img src="img/espaguetis.jpg" class="thumbnail">
+                  <p>Ingredientes:</p>
+                  <ol class="menu large-12 medium-12 small-12 columns">
+                    <li>500 gr. de espaguetis</li>
+                    <li>175 gr. de carne picada de ternera</li>
+                    <li>175 gr. de carne picada de cerdo</li>
+                    <li>1 cebolla y 1 diente de ajo</li>
+                    <li>2 zanahorias</li>
+                    <li>700 gr. de tomates</li>
+                    <li>Queso parmesano rallado</li>
+                    <li>Aceite de oliva</li>
+                    <li>Orégano</li>
+                    <li>Sal y pimienta</li>
+                  </ol><br/>
+
+                  <ol class="large-12 medium-12 small-12 columns">
+                    <li>Poner agua a calentar a fuego fuerte en una olla grande. Cuando rompa a hervir añadir una cucharadita de sal y los espaguetis, dejar que cueza hasta que esté 'al dente', según instrucciones del paquete (unos 10 minutos).</li><br/>
+                    <li>Lavar, perlar y picar muy finas la zanahoria, el ajo y la cebolla. También lavar y rallar los tomates en un bol aparte, y reservarlos. </li><br/>
+                    <li>En una sartén, poner un poco de aceite a calentar a fuego medio. Echar la cebolla y el ajo, cuando la primera este transparente agregar la zanahoria y freír durante unos minutos, hasta que se dore todo.</li><br/>
+                    <li>Agregar la carne picada, salpimentar al gusto y dejar que se haga. Agregar el tomate rallado y mezclar bien, echar un poco de orégano y bajar un poco el fuego, dejar unos minutos para que espese un poco, removiendo de vez en cuando.</li><br/>
+                    <li>Escurrir la pasta, servir con la salsa boloñesa por encima y espolvorear un poco de queso rallado.</li><br/>
+                  </ol>
+                  <div class="large-8 small-12 medium-12 columns">
+                    <textarea name="name" rows="1" cols="5" placeholder="Comentario..."></textarea>
+                    <div class="large-4 medium-5 small-5">
+                    <button type="submit" name="enviar" class="button">Enviar<i class="step fi-comment"></i></button>
+                    </div>
+
+                  </div>
+                </div>
+                <h4>Pasta en salsa Alfredo con pollo. Receta italiana</h4>
+                <div class="large-12 medium-12 small-12 columns">
+                  <img src="img/alfredo.jpg" class="thumbnail">
+                  <p>Ingredientes:</p>
+                  <ol class="menu large-12 medium-12 small-12 columns">
+                    <li>500 gramos de pasta Fetuccini</li>
+                    <li>1 cebolla picada</li>
+                    <li>4 filetes de pechuga de pollo</li>
+                    <li>60 gramos de mantequilla</li>
+                    <li>100 gramos de queso parmesano rallado</li>
+                    <li>1 lata de crema de leche o nata líquida</li>
+                    <li>Pizca de sal</li>
+                    <li>Pizca de pimienta blanca</li>
+                    <li>Pizca de nuez moscada</li>
+                    <li>Agua y aceite</li>
+                  </ol><br/>
+
+                  <ol class="large-12 medium-12 small-12 columns">
+                    <li>El primer paso será preparar la pasta. Para ello, se debe cocinarla en abundante agua caliente con sal, hasta que esté ‘al dente’. Reservar.</li><br/>
+                    <li>En una sartén, rehogar la cebolla finamente picada con la mantequilla. Cuando esté hecha, añadir la crema de leche junto con el queso rallado. Remover con cuchara de madera hasta que empiece a espesarse.</li><br/>
+                    <li>Agregar la sal, la pimienta y la nuez moscada. Reservar.</li><br/>
+                    <li>Salpimentar las pechugas de pollo y freírlas en aceite a la plancha hasta que estén doradas.</li><br/>
+                    <li>Verter la salsa Alfredo sobre la pasta, y luego disponer una pechuga de pollo por encima.</li><br/>
+                  </ol>
+                  <div class="large-8 small-12 medium-12 columns">
+                    <textarea name="name" rows="1" cols="5" placeholder="Comentario..."></textarea>
+                    <div class="large-4 medium-5 small-5">
+                    <button type="submit" name="enviar" class="button">Enviar<i class="step fi-comment"></i></button>
+                    </div>
+
+                  </div>
+                </div>
 
               </div>
 
