--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
+    <div class="container">
     <div class="row">
       <div class="large-12 medium-12 small-12 comluns small-order-1">
         <div class="row align-left">
@@ -73,7 +74,7 @@
                 </div>
               </div>
 
-              <div class="large-12 menu-text ">
+              <div class="large-12 menu-text hide-for-small-only ">
                 <h5>Historial:</h5>
                 <li><a href="#">Lassaga</a></li>
                 <li><a href="#">Entradas</a></li>
@@ -153,6 +154,7 @@
               </div>
 
             </div>
+          </div>
           </div>
           </div>
 
